RESOLVED FIXED275752
REGRESSION (279702@main): [ iOS ] fast/shadow-dom/touch-event-ios.html is constantly crashing.
https://bugs.webkit.org/show_bug.cgi?id=275752
Summary REGRESSION (279702@main): [ iOS ] fast/shadow-dom/touch-event-ios.html is con...
David Kilzer (:ddkilzer)
Reported 2024-06-21 14:42:14 PDT
REGRESSION (279702@main): [ iOS ] fast/shadow-dom/touch-event-ios.html is constantly crashing. Caused by: Enable -Wvla when building WebKit <https://bugs.webkit.org/show_bug.cgi?id=275081> <rdar://129190911> <https://commits.webkit.org/279702@main> Tracked by: <rdar://130217217>
Attachments
David Kilzer (:ddkilzer)
Comment 1 2024-06-21 15:04:51 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-06-21 20:03:46 PDT
Committed 280269@main (de87f88): https://commits.webkit.org/280269@main Reviewed commits have been landed. Closing PR #30062 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.