REGRESSION (279702@main): [ iOS ] fast/shadow-dom/touch-event-ios.html is constantly crashing. <https://bugs.webkit.org/show_bug.cgi?id=275752> <rdar://130217217>

Reviewed by Alexey Proskuryakov.

* Tools/TestWebKitAPI/Tests/WTF/Vector.cpp:
(TestWebKitAPI::TEST(WTF_Vector, Basic)):
(TestWebKitAPI::TEST(WTF_Vector, ZeroSize)): Add.
- Update tests to verify .data() and to explicity test a zero-size
  Vector.

* Tools/WebKitTestRunner/ios/HIDEventGenerator.mm:
(-[HIDEventGenerator touchDown:touchCount:]):
(-[HIDEventGenerator liftUp:touchCount:]):
(-[HIDEventGenerator moveToPoints:touchCount:duration:]):
- Use .data() instead of [0] array offset since .data() returns nullptr
  if the Vector is empty.

Canonical link: https://commits.webkit.org/280269@main